third_party/move/move-compiler-v2/tests/acquires-checker/acquires_error_msg.exp

Diagnostics:
warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  ┌─ tests/acquires-checker/acquires_error_msg.move:7:17
  │
7 │         modify(); // expect error message here
  │                 ^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/acquires-checker/acquires_error_msg.move:11:51
   │
11 │         borrow_global_mut<Test>(@0xcafe).value = 2;
   │                                                   ^


Diagnostics:
error: missing acquires annotation for `Test`
  ┌─ tests/acquires-checker/acquires_error_msg.move:6:16
  │
6 │     public fun call_modify_without_acquire() {
  │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
7 │         modify(); // expect error message here
  │         -------- acquired by the call to `modify`
